--- a/src/public/html/1c_pt.html
+++ b/src/public/html/1c_pt.html
@@ -1,6 +1,5 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="css/index/index.css">
-    <link rel="stylesheet" href="css/index.css">
 
     <div class="" id="pageborder">
         <header></header>
@@ -127,7 +126,7 @@
 
 <script src="./js/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="./js/global.js"></script>
-<script src="./js/run/info1_pt.js"></script>
+<script src="./js/run/info1c_pt.js"></script>
 <script src="./js/capa.js"></script>
 <script src="./js/intro.js"></script>
 <script src="./js/application.js"></script>
