--- a/src/public/html/_template.html
+++ b/src/public/html/_template.html
@@ -116,7 +116,7 @@
                 </div>
             </div>
 
-            <div class="m-5" id="divlastMsg">
+            <div class="m-5" id="divLastMsg">
 
             </div>
 
