--- a/src/public/html/1_pt.html
+++ b/src/public/html/1_pt.html
@@ -7,7 +7,7 @@
     </div>
 
 
-    <nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top d-none">
         <a class="navbar-brand" href="#">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -116,7 +116,7 @@
                 </div>
             </div>
 
-            <div class="m-5" id="divlastMsg">
+            <div class="m-5" id="divLastMsg">
 
             </div>
 
@@ -126,15 +126,15 @@
 
 
 <script src="./js/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="./js/global.js"></script>
-<script src="./js/run/info1_pt.js"></script>
-<script src="./js/capa.js"></script>
-<script src="./js/intro.js"></script>
-<script src="./js/application.js"></script>
-<script src="./js/resources.js"></script>
-<script src="./js/instruction.js"></script>
-<script src="./js/services.js"></script>
-<script src="./js/otherMessages.js"></script>
+<script class="myscript" src="./js/global.js"></script>
+<script class="myscript" src="./js/run/info1_pt.js"></script>
+<script class="myscript" src="./js/capa.js"></script>
+<script class="myscript" src="./js/intro.js"></script>
+<script class="myscript" src="./js/application.js"></script>
+<script class="myscript" src="./js/resources.js"></script>
+<script class="myscript" src="./js/instruction.js"></script>
+<script class="myscript" src="./js/services.js"></script>
+<script class="myscript" src="./js/otherMessages.js"></script>
 
 
 <script>
