--- a/src/public/html/_obdmap.html
+++ b/src/public/html/_obdmap.html
@@ -1,1 +1,3 @@
-<a class="menuItem" href="#" onclick="loadHTML('1_pt.html')">OBD0001</a>
+<div id="lblCarga">Carga</div>
+<a class="cargaItem" href="#" onclick="itemMenuClick('1_pt.html')">OBD0001 - Programação de chaves VW Imob4</a>
+<a class="cargaItem" href="#" onclick="itemMenuClick('1_pt.html')">OBD0002 - Programação de chaves VW Imob4</a>
